--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,21 @@ nav {
 }
 
 .nav-links a {
+  color: #000;
+  font-weight: 600;
   padding: 1.5rem;
   text-decoration: none;
 }
+
+.hero {
+  display: flex;
+}
+
+.hero img {
+  width: 200px;
+}
+
+/* footer {
+  display: grid;
+  grid-template-columns: (3, 100px);
+} */
