--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 6rem;
 }
 
 nav {
@@ -22,13 +22,16 @@ nav {
 
 .hero {
   display: flex;
+  justify-content: space-between;
 }
 
 .hero img {
   width: 200px;
+  border-radius: 1rem;
 }
 
-/* footer {
+footer {
   display: grid;
-  grid-template-columns: (3, 100px);
-} */
+  grid-template-columns: repeat(4, auto);
+  padding: 2rem 0;
+}
