--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ nav {
 .nav-links {
   display: flex;
   list-style: none;
+  align-items: center;
 }
 
 .nav-links a {
@@ -34,4 +35,12 @@ footer {
   display: grid;
   grid-template-columns: repeat(4, auto);
   padding: 2rem 0;
+}
+
+footer ul {
+  list-style: none;
+}
+
+.footer-links a{
+  text-decoration: none;
 }
